--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,8 @@ p {
 }
 
 #testimonials {
-  background: url("/image/section.jpg") no-repeat center center/cover;
+  background: url(https://alrekt.github.io/ActivityCompletion78910/image/section.jpg)
+    no-repeat center/cover;
   height: 600px;
   overflow: hidden;
 }
