--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,10 @@ p {
   overflow: hidden;
   height: 600px;
   z-index: 2;
+  background: url(https://alrekt.github.io/ActivityCompletion78910/image/section.jpg)
+    no-repeat center/cover;
+  height: 600px;
+  overflow: hidden;
 }
 #testimonials .lead-head {
   color: #fff;
